modules/App/assets/app.bundle.css
/* ... */
/* Large screen and bigger */
@media (min-width: 1600px) {

    /* Whole */
    .kiss-width-1-1\@xl { width: 100%; }

    /* Halves */
    .kiss-width-1-2\@xl { width: 50%; }

    /* Thirds */
    .kiss-width-1-3\@xl { width: calc(100% * 1 / 3.001); }
    .kiss-width-2-3\@xl { width: calc(100% * 2 / 3.001); }

    /* Quarters */
    .kiss-width-1-4\@xl { width: 25%; }
    .kiss-width-3-4\@xl { width: 75%; }

    /* Fifths */
    .kiss-width-1-5\@xl { width: 20%; }
    .kiss-width-2-5\@xl { width: 40%; }
    .kiss-width-3-5\@xl { width: 60%; }
    .kiss-width-4-5\@xl { width: 80%; }

    /* Sixths */
    .kiss-width-1-6\@xl { width: calc(100% * 1 / 6.001); }
    .kiss-width-5-6\@xl { width: calc(100% * 5 / 6.001); }

    /* Auto */
    .kiss-width-auto\@xl { width: auto; }

    /* Expand */
    .kiss-width-expand\@xl {
        flex: 1;
        min-width: 1px;
    }

}
.kiss-width-max-small { max-width: var(--kiss-width-max-small, 200px) !important; }
.kiss-width-max-medium { max-width: var(--kiss-width-max-small, 640px) !important; }
.kiss-disabled { pointer-events: none; }
.kiss-link-muted,
.kiss-link-muted:hover,
.kiss-link-muted:active,
.kiss-link-muted:visited
{ color: inherit; }
.kiss-overflow-auto { overflow: auto; }
.kiss-overflow-x-auto { overflow-x: auto; }
.kiss-overflow-y-auto { overflow-y: auto; }
.kiss-overflow-hidden { overflow: hidden; }
.kiss-display-block { display: block !important; }
.kiss-display-inline { display: inline !important; }
.kiss-display-inline-block { display: inline-block !important; }
.kiss-opacity-0 { opacity: 0 !important; }
.kiss-opacity-1 { opacity: .1 !important; }
.kiss-opacity-2 { opacity: .2 !important; }
.kiss-opacity-3 { opacity: .3 !important; }
.kiss-opacity-4 { opacity: .4 !important; }
.kiss-opacity-5 { opacity: .5 !important; }
.kiss-opacity-6 { opacity: .6 !important; }
.kiss-opacity-7 { opacity: .7 !important; }
.kiss-opacity-8 { opacity: .8 !important; }
.kiss-opacity-9 { opacity: .9 !important; }
.kiss-opacity-1 { opacity: 1 !important; }
.kiss-transition { transition: all .3s ease; }
.kiss-cursor-pointer { cursor: pointer;}
.kiss-border-circle { border-radius: 50%; }
.kiss-svg,
.kiss-svg:not(.kiss-preserve) [fill*='#']:not(.kiss-preserve) { fill: currentcolor; }
.kiss-svg:not(.kiss-preserve) [stroke*='#']:not(.kiss-preserve) { stroke: currentcolor; }
/*
 * Fix Firefox blurry SVG rendering: https://bugzilla.mozilla.org/show_bug.cgi?id=1046835
 */
.kiss-svg { transform: translate(0,0); }
.kiss-cover {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}
.kiss-cover[invisible="true"] {
    visibility: hidden;
    user-select: none;
    -webkit-user-select: none;
}
.kiss-responsive-width {
    max-height: none;
    max-width: 100%;
    height: auto;
}
.kiss-responsive-height {
    max-height: 100%;
    width: auto;
}
[hidden],
.kiss-hidden { display: none !important; }
.kiss-hidden-visually {
    position: absolute !important;
    overflow: hidden !important;
    width: 1px !important;
    height: 1px !important;
    padding: 0 !important;
    border: 0 !important;
    clip: rect(1px, 1px, 1px, 1px) !important
}
.kiss-visible {
    visibility: visible !important;
}
/* Phone landscape and bigger */
@media (min-width: 640px) {
    .kiss-hidden\@s { display: none !important; }
}
/* Tablet landscape and bigger */
@media (min-width: 960px) {
    .kiss-hidden\@m { display: none !important; }
}
/* Desktop and bigger */
@media (min-width: 1200px) {
    .kiss-hidden\@l { display: none !important; }
}
/* Large screen and bigger */
@media (min-width: 1600px) {
    .kiss-hidden\@xl { display: none !important; }
}
/*
 * Visible
 */
/* Phone portrait and smaller */
@media (max-width: 639px) {
    .kiss-visible\@s { display: none !important; }
}
/* Phone landscape and smaller */
@media (max-width: 959px) {
    .kiss-visible\@m { display: none !important; }
}
/* Tablet landscape and smaller */
@media (max-width: 1199px) {
    .kiss-visible\@l { display: none !important; }
}
/* Desktop and smaller */
@media (max-width: 1599px) {
    .kiss-visible\@xl { display: none !important; }
}
.kiss-invisible {
    visibility: hidden !important;
    pointer-events: none;
}
.kiss-visible-toggle:not(:hover):not(:focus) .kiss-hidden-hover:not(:focus-within) {
    display: none;
}
.kiss-visible-toggle:not(:hover):not(:focus) .kiss-invisible-hover:not(:focus-within) {
    opacity: 0 !important;
}
.kiss-visible-toggle {
    -webkit-tap-highlight-color: transparent;
}
.kiss-visible-toggle:focus { outline: none; }
@media (pointer: coarse) {
    .kiss-hidden-touch { display: none !important; }
}
.kiss-hidden-notouch { display: none !important; }
@media (pointer: coarse) {
    .kiss-hidden-notouch { display: block !important; }
}
/* ... */

